--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/server.ts",
-    "lint": "eslint src/**/*.ts --max-warnings 0",
-    "lint:fix": "eslint src/**/*.ts --fix"
+    "lint": "eslint **/*.{js,mjs,cjs,ts} --max-warnings 0",
+    "lint:fix": "eslint  **/*.{js,mjs,cjs,ts} --fix"
   },
   "keywords": [],
   "author": "",
