--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/server.ts",
-    "lint": "eslint **/*.{js,mjs,cjs,ts} --max-warnings 0",
+    "lint": "eslint **/*.{js,mjs,cjs,ts}",
     "lint:fix": "eslint  **/*.{js,mjs,cjs,ts} --fix"
   },
   "keywords": [],
