assign edition commit

--- a/.env
+++ b/.env
@@ -6,4 +6,7 @@ DB_PASSWORD=123456789
 DB_NAME=ecommerce_system
 JWT_KEY=H8Mx4kD6BMw4fOZi
 PORT=4000
-
+JWT_SECRET=mySuperSecretKey
+TOKEN_EXPIRES_IN=1d
+SECURE_ALGORITH=HS256
+ECOMMERCE_SYSTEM=E-commerce-System
